dotNetRDF Toolkit for Windows/Mono
==================================

A Toolkit of command line utilities and GUI tools for working with RDF data

Version 1.0.0

dotNetRDF Project 2009-13
dotnetrdf-develop@lists.sf.net

Change Log
----------

This represents a summary of additions, changes and removals for the 1.0.0 release of the dotNetRDF Toolkit
for Windows/Mono detailed by Tool.

Note: While some tools may have no changes all tools benefit from being upgraded to the latest release of the
dotNetRDF core library which typically incorporates bug fixes and performance improvements so you should still
upgrade to these latest versions.

rdfConvert
- Fix a bug where converting from graph to dataset formats would lose prefixes (TOOLS-333)

rdfEditor (Not available under Mono)
 
rdfOptStats
   
rdfQuery

rdfServer
- Fix a couple of bugs which meant that SPARQL updates would not work correctly (TOOLS-323, TOOLS-324)

rdfServerGUI
 
rdfWebDeploy
- Fix Nuget Dependencies

soh 

SparqlGUI

StoreManager
- Native SPARQL Update support for AllegroGraph (CORE-308)
